# rex_voice_assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  hours.txt  pyproject.toml  requirements.txt  setup_notes.txt  test_metrics.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
app/audio/: recorder.py  vad.py
pulse_conf/: client.conf
rex_main/: audio_stream.py  benchmark.py  cli.py  commands.py  config.py  default_config.yaml  fast_vad.py  matcher.py  rex.py  setup_wizard.py  vad_stream.py  whisper_worker.py
rex_main/dashboard/: server.py
rex_main/dashboard/static/: dashboard.css  dashboard.js  index.html
scripts/: record_test.py  transcribe_test.py  vad_segment.py  vad_test.py  wav_feed_test.py
stand_app/: commands.py  match_commands.py  notes.txt  preprocess_wav.py  record.py  transcribe_segs.py  vad_detect.py
