[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-voice-assistant"
version = "0.1.0"
description = "Offline voice assistant for controlling YouTube Music Desktop and Spotify"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["voice-assistant", "whisper", "spotify", "youtube-music", "speech-recognition"]

dependencies = [
    "numpy>=1.24",
    "scipy",
    "sounddevice",
    "soundfile",
    "faster-whisper>=0.10",
    "silero-vad",
    "torch>=2.0",
    "torchaudio",
    "pyyaml",
    "requests",
    "ytmusicapi",
    "spotipy",
    "python-dotenv",
    "click>=8.0",
    "rich>=13.0",
    "keyring",
]

[project.optional-dependencies]
cuda = ["nvidia-cudnn-cu12==9.5.1.17"]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
rex = "rex_main.cli:main"

[project.urls]
Homepage = "https://github.com/David-Antolick/rex_voice_assistant"

[tool.setuptools.packages.find]
where = ["."]
include = ["rex_main*"]

[tool.setuptools.package-data]
rex_main = ["default_config.yaml"]
